Correct text aligns for all elements

--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -81,11 +81,6 @@
 	#quotes_container {
 		place-self: center;
 	}
-
-	#main,
-	#time {
-		padding: 3em 0;
-	}
 }
 
 #element-mover {
